[package]
name = "mcp4728"
version = "0.1.0"
edition = "2021"
description = "Platform agnostic rust driver for the MCP4728 4-channel, 12-bit I2C DAC."
readme = "README.md"
repository = "https://github.com/davidstalnaker/mcp4728"
license = "MIT OR Apache-2.0"
keywords = ["dac", "driver", "embedded-hal-driver"]
categories = ["no-std", "embedded", "hardware-support"]


[dependencies]
embedded-hal = "0.2.7"
num_enum = { version = "0.5.7", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.8.0"

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.3.2"
