[package]
name = "mcp4728"
version = "0.1.0"
edition = "2021"
description = "Platform agnostic rust driver for the MCP4728 4-channel, 12-bit I2C DAC."
readme = "README.md"
repository = "https://github.com/davidstalnaker/mcp4728"
license = "MIT OR Apache-2.0"
keywords = ["dac", "driver", "embedded-hal", "embedded-hal-driver"]
categories = ["no-std", "embedded", "hardware-support"]
autoexamples = false

[features]
defmt-03 = ["dep:defmt"]
async = ["dep:embedded-hal-async"]
# Use embedded-hal-mock/embedded-hal-async once https://github.com/dbrgn/embedded-hal-mock/issues/118 is fixed

[dependencies]
defmt = { version = "0.3", optional = true }
embedded-hal = "1.0.0"
num_enum = { version = "0.7.2", default-features = false }
embedded-hal-async = { version = "1.0.0", optional = true }

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0", default-features = false, features = ["eh1"] }

[target.'cfg(target_os = "linux")'.dev-dependencies]
linux-embedded-hal = "0.4.0"
